Added button with onclick function add darkMode() as onclick function

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#section2">Section 2</a></li>
                 <li><a href="#section3">Section 3</a></li>
             </ul>
+            <button onclick="darkMode()">Dark Mode</button>
         </nav>
     </header>
     
@@ -39,5 +40,10 @@
     <footer>
         <p>&copy; 2024 til4life. All rights reserved.</p>
     </footer>
+    <script>
+        function darkMode() {
+           document.body.style.backgroundColor = "#444";
+        }
+        </script>
 </body>
 </html>
